--- a/week_8/problem_set_8/public/index.html
+++ b/week_8/problem_set_8/public/index.html
@@ -55,5 +55,6 @@
     <div id="content"></div>
   </body>
   <script src="/js/main.js"></script>
+  <script src="/js/contact-form.js"></script>
   <!-- <script src="/js/main.js"></script> -->
 </html>
