--- a/week_8/problem_set_8/public/index.html
+++ b/week_8/problem_set_8/public/index.html
@@ -24,6 +24,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
+          <a class="nav-link" href="/calculator">Kalkulátor</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="/pmtsz">Szabályzat</a>
         </li>
         <li class="nav-item active">
@@ -35,6 +38,17 @@
   <div id="content"></div>
 </body>
 <script type="module" src="/js/main.js"></script>
-<script src="/js/contact-form.js"></script>
+<script type="module" src="/js/contact-form.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<footer class="mt-auto">
+  <div class="col-md-4 d-flex align-items-center">
+    <span class="text-muted">© 2022 Büntetőpont Kalkulátor | verzió: 1.0.0 </span>
+  </div>
+</footer>
 
 </html>
